--- a/src/components/Circle Carousel (hair)/circle.module.css
+++ b/src/components/Circle Carousel (hair)/circle.module.css
@@ -41,13 +41,12 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    gap: 20px;
     padding: 20px;
     position: relative;
     left: 10%;
-        font-family: Quicksand;
-
+    font-family: Quicksand;
 }
+
 
 .secondWrapper a{
     text-decoration: none;
@@ -57,13 +56,16 @@
 .content {
     padding-left: 210px;
     padding-right: 50px;
+    font-family: Quicksand;
+    font-size: 20px;
 }
 
 .content h2 {
     color: white;
     text-shadow: 1px 1px 2px black, 0 0 25px rgba(44, 134, 119, 0.699),
         0 0 5px rgba(0, 139, 113, 0.662);
-            font-family: Bodoni Moda;
+    font-family: Bodoni Moda;
+        font-size: 30px;
 
 }
 
@@ -87,6 +89,8 @@
     cursor: pointer;
     transition: 0.4s;
     color: white;
+    font-family: Quicksand;
+    font-size: 15px;
 }
 
 .ctaButtons button:hover {
